--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,7 +23,69 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section>
+      <h1>Retreat from the desk, return refreshed.</h1>
+      <img src="" alt="retreat">
+    </section>
+
+    <aside>
+      <div>
+        <h2>Want to join the next retreat?</h2>
+        <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        <h2>Find out more</h2>
+        <input type="text" name="name" value="email address">
+        <input type="button" value="Download Itinerary">
+      </div>
+    </aside>
+
+    <section>
+    </section>
+
+
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <address class="contact">
+          <h3>Contact</h3>
+          <p>555-555-5555</p>
+          <p>hello@unplugged.com</p>
+        </address>
+        <div class="social">
+          <h3>Social</h3>
+          <div class="social-icons">
+            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+            <p><a href="https://www.twitter.com" target="_blank"></a></p>
+            <p><a href="https://www.instagram.com" target="_blank"></a></p>
+          </div>
+          <p>Copyright 2019 | Unplugged</p>
+        </div>
+      </div> <!-- footer-content ends -->
+    </div> <!-- footer content-wrapper ends -->
+
+    <div class="copyright">
+    </div>
+
+  </footer>
+
+
+
+
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
