--- a/about/index.html
+++ b/about/index.html
@@ -25,50 +25,91 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="#">
+        <img src="" alt="unplugged logo">
+      </a>
       <div class="header-divider"></div>
       <nav>
         <ul>
           <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
+          <li><a href="index.html" target="_blank">About</a></li>
         </ul>
       </nav>
     </div>
-
-
   </header>
 
   <main>
 
-    <section>
+    <section class="mission">
+      <div class="content-wrapper">
+        <h2>Our Mission - we want to make you the team you always wanted to be. </h2>
+        <div class="mission-content">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+          </p>
+        </div>
+      </div> <!-- content-wrapper ends -->
     </section>
 
-    <aside>
-    </aside>
+    <section class="map">
+        <figure>
+        </figure>
+    </section>
 
-  </main>
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this.</h2>
+        <address class="contact-content">
+          <div>
+            <h4>General Information</h4>
+            <p>
+              333 Main St, Lake Geneva, WI 53147<br>
+              555-555-5555<br>
+              hello@unplugged.com
+            </p>
+          </div>
+          <div>
+            <h4>Chat with a Facilitator</h4>
+            <p>
+              555-555-5556<br>
+              facilitator@unplugged.com
+            </p>
+          </div>
+        </address> <!-- contact-content div ends -->
+      </div> <!-- contact content wrapper ends -->
+    </section>
+  </main> <!-- main wrapper -->
 
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
         <address class="contact">
-          <h3>Contact</h3>
+          <h4>Contact</h4>
           <p>555-555-5555</p>
           <p>hello@unplugged.com</p>
         </address>
         <div class="social">
-          <h3>Social</h3>
+          <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
-            <p><a href="https://www.twitter.com" target="_blank"></a></p>
-            <p><a href="https://www.instagram.com" target="_blank"></a></p>
+            <p>
+              <a href="https://www.facebook.com/yoursite" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://www.twitter.com" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com" target="_blank"></a>
+            </p>
           </div>
-          <p>Copyright 2019 | Unplugged</p>
         </div>
-      </div> <!-- footer-content ends -->
-    </div> <!-- footer content-wrapper ends -->
+      </div> <!-- footer content ends -->
+    </div> <!--footer content-wrapper ends-->
 
-    <div class="copyright">
+    <div class=copyright>
+      <p>Copyright 2019 | Unplugged</p>
     </div>
 
   </footer>
