--- a/faq/index.html
+++ b/faq/index.html
@@ -25,50 +25,76 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="#">
+        <img src="" alt="unplugged logo">
+      </a>
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
+          <li><a href="index.html" target="_blank">FAQ</a></li>
+          <li><a href="../about/index.html" target="_blank">About</a></li>
         </ul>
       </nav>
     </div>
-
-
   </header>
 
-  <main>
-
-    <section>
-    </section>
-
-    <aside>
-    </aside>
-
-  </main>
+  <main class="faq">
+      <div class="content-wrapper">
+        <h2>Frequently Asked Questions</h2>
+        <div class="faq-content">
+          <h4>How do I get to the Unplugged retreat?</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+        <div class="faq-content">
+          <h4>How do I get to the Unplugged retreat?</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+        <div class="faq-content">
+          <h4>How do I get to the Unplugged retreat?</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+        <div class="faq-content">
+          <h4>How do I get to the Unplugged retreat?</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+      </div> <!-- content-wrapper ends -->
+  </main> <!-- main wrapper -->
 
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
         <address class="contact">
-          <h3>Contact</h3>
+          <h4>Contact</h4>
           <p>555-555-5555</p>
           <p>hello@unplugged.com</p>
         </address>
         <div class="social">
-          <h3>Social</h3>
+          <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
-            <p><a href="https://www.twitter.com" target="_blank"></a></p>
-            <p><a href="https://www.instagram.com" target="_blank"></a></p>
+            <p>
+              <a href="https://www.facebook.com/yoursite" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://www.twitter.com" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com" target="_blank"></a>
+            </p>
           </div>
-          <p>Copyright 2019 | Unplugged</p>
         </div>
-      </div> <!-- footer-content ends -->
-    </div> <!-- footer content-wrapper ends -->
+      </div> <!-- footer content ends -->
+    </div> <!--footer content-wrapper ends-->
 
-    <div class="copyright">
+    <div class=copyright>
+      <p>Copyright 2019 | Unplugged</p>
     </div>
 
   </footer>
